# krankaoke

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  tox.ini
.github/workflows/: pythonapp.yml
krankaoke_backend/: conftest.py  manage.py
krankaoke_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
krankaoke_backend/krankaoke_backend/: api_urls.py  asgi.py  settings.py  urls.py  wsgi.py
krankaoke_backend/krankaokes/: apps.py  models.py  serializers.py  tests.py  views.py
krankaoke_backend/krankaokes/migrations/: 0001_initial.py  0002_krankaoke_timings.py
krankaoke_backend/users/: admin.py  serializers.py  views.py
krankaoke_frontend/: README.md  package-lock.json  package.json
krankaoke_frontend/public/: index.html
krankaoke_frontend/src/: App.vue  api.js  config.js  main.js
krankaoke_frontend/src/components/: Krankaoke.vue  KrankaokeForm.vue  KrankaokeRecorder.vue
krankaoke_frontend/src/config/: default.json
krankaoke_frontend/src/router/: index.js
krankaoke_frontend/src/views/: Home.vue  KrankaokeCreate.vue  KrankaokeList.vue  KrankaokePlayer.vue
